# monster-avengers

./: .gitignore  LICENSE  README.md  monster-avengers.asd
assets/css/: effeckt.css  supplement.css
cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md  WORKSPACE  armor_set.h  armor_up.h  find_armor.cc  helpers.h  iterator.h  jewels_query.h  jewels_query_test.cc  log.txt  monster_hunter_data.h  or_and_tree.h  parser.h  query.h  search_util.h  serve_explore.cc  serve_query.cc  signature.h  signature_test.cc  test.cc
cpp/aux/: timer.h
cpp/base/: BUILD  error_code.h  status.h  status_test.cc  status_test_util.h  strcat.h  strcat_test.cc
cpp/common/: BUILD  signature.h  signature_test.cc
cpp/core/: armor_up.h  explore.h  explore_test.cc  find_armor.cc  iterator.h  jewels_query.h  jewels_query_test.cc  or_and_tree.h  pruners.h  test.cc
cpp/data/: BUILD  armor.h  data.h  data_loader.h  data_set.h  effect.h  item.h  jewel.h  language_text.h  skill.h  sqlite_loader.cc  sqlite_loader.h  sqlite_loader_test.cc
cpp/data/testdata/: test.db
cpp/data/types/: BUILD  armor.h  armor_test.cc  jewel.h  properties.cc  properties.h  properties_test.cc  skill.h  types_test.cc
cpp/data/utils/: BUILD  enum_string.h
cpp/dataset/: CMakeLists.txt  data_service.cc  dataset.cc  dataset.h  dataset_full.cc  dataset_full_test.cc  dataset_test.cc
cpp/dataset/addon/: addons.h
cpp/dataset/base/: data_utils.h  properties.cc  properties.h  properties_test.cc  reindexed_table.h  reindexed_table_test.cc
cpp/dataset/core/: armor.h  armor_set.h  jewel.h  skill.h
cpp/dataset/loader/: binary_loader.cc  sqlite_loader.cc
cpp/iterators/: CMakeLists.txt  base.h  base_test.cc
cpp/lisp/: lisp_object.h  parser.h  reader.h
cpp/server/: CMakeLists.txt  armor_up_server.cc  daemon.h  micro_http_server.h
cpp/supp/: CMakeLists.txt  helpers.cc  helpers.h
cpp/testing/: CMakeLists.txt  regression.cc  test.sh  verifier.h
cpp/testing/queries/: dex-bug.lisp  simple.lisp
cpp/testing/queries/mh4g/: 6-skills.lisp  dex-bug-1.lisp  dex-bug.lisp  negative-skill.lisp  test.sh
cpp/testing/queries/mhx/: range-dissapear.lisp  test.sh
cpp/utils/: CMakeLists.txt  armor_set.h  filter.h  formatter.h  jewels_query.h  jewels_query_test.cc  output_specs.h  query.h  query_test.cc  signature.h  signature_test.cc  tiny_map.h  tiny_map_test.cc
cpp/winbind/: winbind.sln
cpp/winbind/winbind/: ReadMe.txt  dllmain.cpp  stdafx.cpp  winbind.vcxproj  winbind.vcxproj.filters
cpp/winbind/winbind/sqlite/: sqlite3.exp  sqlite3.lib
csharp/winbind_wrapper/: .gitignore  winbind_wrapper.sln
csharp/winbind_wrapper/winbind_wrapper/: Program.cs  armor_up_wrapper.cs  parser.cs  winbind_wrapper.csproj
csharp/winbind_wrapper/winbind_wrapper/Properties/: AssemblyInfo.cs
dataset/MH4/: cuisses.lisp  gloves.lisp  sabatons.lisp  skills.lisp
dataset/MH4G/: cuirasses.lisp  cuisses.lisp  gloves-4g.lisp  gloves.lisp  helms-4g.lisp  helms.lisp  sabatons.lisp  skills-4u.lisp  skills.lisp
dataset/MH4GU/: armors.lisp  items.lisp  jewels.lisp  skills.lisp
dataset/MHP3/: cuirasses.lisp  cuisses.lisp  gloves.lisp  helms.lisp  jewels.lisp  sabatons.lisp  skills.lisp
dataset/TESTING/: cuirasses.lisp  cuisses.lisp  gears.lisp  gloves.lisp  helms.lisp  jewels.lisp  sabatons.lisp  skills.lisp
dataset/TORSO_UP/: cuirasses.lisp  cuisses.lisp  gloves.lisp  helms.lisp  jewels.lisp  sabatons.lisp
dataset/jap/armors/: cuirasses.lisp  helms.lisp
dataset/jap/jewels/: jewels.lisp
dataset/jap/skills/: skills.lisp
docs/jewel-query/: .gitignore  jewel-query.tex
docs/search-algorithm/: search.tex
lisp/: armor-up.lisp  crawler.lisp  data-loader.lisp  data-struct.lisp  emitter.lisp  encoding.lisp  eva-list.lisp  jewels.lisp  package.lisp  package.lisp~
lisp/converter/: mh4g-dex.lisp  mh4gu.lisp
lisp/crawler/: crawler-test.lisp  mh4-crawler.lisp  mh4g-crawler.lisp  mhp3-crawler.lisp  some-skill.html  wikia-mh4u-extender.lisp
lisp/engine/: armor-up.lisp  data-loader.lisp  emitter-test.lisp  emitter.lisp  eva-list.lisp  jewels.lisp
lisp/ui/: backend.lisp  init.lisp  simple-web.lisp
lisp/ui/widgets/: amulet-panel.lisp  app-view.lisp  armor-set.lisp  help-panel.lisp  parameter-panel.lisp  skill-panel.lisp
lisp/unit-test/: armor-up-test.lisp  crawler-test.lisp  emitter-test.lisp
lisp/webapp/: app.lisp
systemd/: monster-avenger.service
